--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -33,7 +33,7 @@
     <div class="container">
 
       <form class="form-signin" method="get" action="/images">
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in with Twitter</button>
+        <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in with GitHub</button>
       </form>
 
     </div> <!-- /container -->
