On branch hw2  Your branch is up-to-date with 'origin/hw2'.  Changes to be committed: 	modified:   src/main/java/edu/cmu/iccb/Application.java 	modified:   src/main/java/edu/cmu/iccb/HomeController.java 	modified:   src/main/resources/templates/login.html#

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -44,11 +44,11 @@
       </p>
       <br />
       <form class="form-signin" method="get"   action="https://github.com/login/oauth/authorize">
-      	<button class="btn btn-lg btn-primary btn-block" type="submit" name="client_id" value="cc3ba39d2683bd3b59bc"> Sign in with Github</button>
+      	<button class="btn btn-lg btn-primary btn-block" type="submit" name="client_id" value="cc3ba39d2683bd3b59bc"> Straight to Github</button>
       </form>
       
        <form class="form-signin" method="get" action="/images">
-      	<button class="btn btn-lg btn-primary btn-block" type="submit"> Sign in with Github 2</button>
+      	<button class="btn btn-lg btn-primary btn-block" type="submit"> Straight to images</button>
       </form>
 
     </div> <!-- /container -->
